<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_description">My Android Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="first_app">POPULAR MOVIES</string>
    <string name="second_app">ALEXANDRIA</string>
    <string name="third_app">FOOTBALL SCORES</string>
    <string name="fourth_app">JOKE TELLING</string>
    <string name="fifth_app">XYZ READER</string>
    <string name="sixth_app">SUNSHINE</string>
    <string name="seventh_app">CAPSTONE</string>

</resources>
