<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.abhijeetsinghkgp.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/first_app"
        android:id="@+id/first_app"
        android:layout_below="@+id/app_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="displayToast"
        android:background="#FF4D5EBA"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/third_app"
        android:id="@+id/third_app"
        android:layout_below="@+id/second_app"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="displayToast"
        android:background="#FF4D5EBA"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/second_app"
        android:id="@+id/second_app"
        android:layout_below="@+id/first_app"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="displayToast"
        android:background="#FF4D5EBA"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_description"
        android:id="@+id/app_description"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/fourth_app"
        android:id="@+id/fourth_app"
        android:layout_below="@+id/third_app"
        android:onClick="displayToast"
        android:background="#FF4D5EBA"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/third_app"
        android:layout_alignEnd="@+id/third_app"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/fifth_app"
        android:id="@+id/fifth_app"
        android:layout_below="@+id/fourth_app"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="displayToast"
        android:background="#FF4D5EBA"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/sixth_app"
        android:id="@+id/sixth_app"
        android:layout_below="@+id/fifth_app"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="displayToast"
        android:background="#FF4D5EBA"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/seventh_app"
        android:id="@+id/seventh_app"
        android:onClick="displayToast"
        android:layout_below="@+id/sixth_app"
        android:background="#FF4D5EBA"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/sixth_app"
        android:layout_alignEnd="@+id/sixth_app"
        android:textColor="#FFFFFF" />
</RelativeLayout>
